# nomenclature

./: .gitignore  .readthedocs.yaml  .stickler.yml  CITATION.cff  DEVELOPING.rst  MetaCode_PR2.ipynb  README.md  Untitled.ipynb  foo.txt  pyproject.toml  readthedocs.yml  setup.cfg
.github/workflows/: black.yml  build-docs.yml  nightly.yaml  publish.yaml  pytest.yml  ruff.yml
.workflows/github/: pytest.yml
doc/source/: api.rst  cli.rst  conf.py  getting_started.rst  guidelines.rst  index.rst  install.rst  installation.rst  usage.rst  user_guide.rst
doc/source/_static/: custom.css
doc/source/_templates/: navigation.html
doc/source/api/: codelist.rst  datastructuredefinition.rst  nomenclature.rst  regionprocessor.rst
doc/source/user_guide/: cli.rst  code-example.rst  codelist.rst  directory-structure.rst  howto.rst  local-usage.rst  model-mapping.rst  model-registration.rst  region-processing.rst  region.rst  tutorial_edit_existing_variable_codelist.ipynb  variable-guidelines.rst  variable.rst
docs/: api.rst  cli.rst  index.rst  installation.rst  user_guide.rst
docs/_templates/: navigation.html
docs/api/: countries.rst  countryprocessor.rst  datastructureconfig.rst  datastructuredefinition.rst  datavalidator.rst  nuts.rst  regionprocessor.rst  requireddatavalidator.rst  testing.rst
docs/user_guide/: config.rst  data-validation.rst  directory-structure.rst  local-usage.rst  model-mapping.rst  model-registration.rst  region.rst  validation.rst  variable.rst
docs/user_guide/validation/: data-validation.rst  required-data-validation.rst
nomenclature/: __init__.py  __main__.py  _version.py  cli.py  code.py  codelist.py  codes.py  codes_models.py  config.py  core.py  countries.py  definition.py  error.py  exceptions.py  logging.json  logging.yaml  nuts.py  region_mapping_errors.py  region_mapping_models.py  region_mapping_schema.json  region_mapping_schema.yml  testing.py  utils.py  validation.py
nomenclature/error/: codelist.py  region.py  required_data.py  variable.py
nomenclature/iamc/: datapoint.py
nomenclature/processor/: __init__.py  aggregator.py  countries.py  country.py  data.py  data_validator.py  generic.py  iamc.py  meta.py  nuts.py  processor.py  region.py  requiredData.py  requiredTS.py  required_data.py  requireddata.py  utils.py  validator.py
nomenclature/validation_schemas/: generic_schema.yaml  meta_schema.yaml  region_mapping_schema.yaml  region_schema.yaml  tag_schema.yaml  variable_schema.yaml
templates/: model-registration-template.xlsx
tests/: alias_test.py  conftest.py  test_aggregator.py  test_check_aggregate.py  test_cli.py  test_code.py  test_codelist.py  test_codes.py  test_config.py  test_core.py  test_countries.py  test_country_aggregation.py  test_data_validation.py  test_definition.py  test_definition_variable.py  test_generic_processor.py  test_meta.py  test_model_registration_parser.py  test_nuts_aggregation.py  test_process.py  test_processor.py  test_region_aggregation.py  test_requiredData.py  test_requiredTS.py  test_required_data.py  test_requireddata.py  test_testing.py  test_validate_data.py  test_validation.py
tests/data/: create_yaml_from_xlsx.xlsx  validation_nc.xlsx  validation_nc_duplicates.xlsx  validation_nc_flat.yaml  validation_nc_list_arg.xlsx
tests/data/config/: datetime.yaml  datetime_false.yaml  datetime_true.yaml  datetime_utc.yaml  datetime_year.yaml  dimensions.yaml  exclude_filter_wrong_level.yaml  external_repo_filters.yaml  filter_mappings.yaml  hash_and_release.yaml  include_filter_wrong_level.yaml  include_nonexistent_code.yaml  include_nonexistent_hierarchy.yaml  include_nonexistent_mapping.yaml  multiple_external_repos_filters.yaml  multiple_repos_for_mapping.yaml  multiple_repos_per_dimension.yaml  unknown_repo.yaml
tests/data/invalid_yaml/: foo.yaml
(+256 files in other folders)
