[metadata]
name = nomenclature-iamc
author = Scenario Services team, ECE program, IIASA
author_email = ece-scse@iiasa.ac.at
license = APACHE-2.0
description = Package for managing codelists & attributes for IAMC-format datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IAMconsortium/nomenclature

[options]
packages = nomenclature
include_package_data = True
install_requires =
    click >= 8
    pyam-iamc >= 0.12  # the pyam package is released on pypi under this name
    openpyxl
    setuptools >= 41
    pydantic
    pyyaml
    jsonschema
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest

[flake8]
max-line-length = 88

[options.entry_points]
console_scripts =
    nomenclature = nomenclature.testing:cli
