[metadata]
name = nomenclature-iamc
author = Scenario Services team, ECE program, IIASA
author_email = ece-scse@iiasa.ac.at
license = APACHE-2.0
description = Package for managing codelists & attributes for IAMC-format datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IAMconsortium/nomenclature

[options]
packages = nomenclature
include_package_data = True
python_requires = >= 3.8
install_requires =
    click >= 8
    pyam-iamc >= 1.7.0
    openpyxl
    setuptools >= 41
    pydantic
    pyyaml
    jsonschema
    setuptools_scm
    pandas >= 1.5.2
    numpy
setup_requires =
    setuptools >= 41
    setuptools_scm

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    sphinx-click
    numpydoc

[options.entry_points]
console_scripts =
    nomenclature = nomenclature:cli

[flake8]
max-line-length = 88
